// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`scopes get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/scopes/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`scopes getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/scopes",
}
`;

exports[`scopes remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": undefined,
  "method": "DELETE",
  "url": "https://auth.globus.org/v2/api/scopes/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`scopes update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "71",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "scope": {
      "description": "new description",
      "name": "Updated Scope Name",
    },
  },
  "method": "PUT",
  "url": "https://auth.globus.org/v2/api/scopes/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;
